--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,8 @@ android {
 
     defaultConfig {
         applicationId "cls.development.travelrush"
-        minSdkVersion 26
+        minSdkVersion 21
+
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -28,5 +29,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    //Custom
+
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.3.0'
+
+    implementation 'com.smartcar.sdk:smartcar-auth:3.0.0'
+    implementation 'androidx.browser:browser:1.2.0'
+
+
 
 }
