--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,21 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
+
         google()
         jcenter()
+        maven {
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                username = 'CodeLS'
+                // Use the secret to ken you stored in gradle.properties as the password
+                password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: ""
+            }
+        }
     }
 }
 
